# opengl-ui

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: application.hpp  border_radius.hpp  debug.hpp  dim.hpp  font.hpp  glad.h  quad.hpp  shader.hpp  text.hpp
resources/shaders/: quad.fs  quad_frag_shader.glsl  quad_tex_frag_shader.glsl  quad_vert_shader.glsl  text.fs
shaders/: quad_frag_shader.glsl  quad_vert_shader.glsl
src/: application.cpp  border_radius.cpp  debug.cpp  dim.cpp  font.cpp  glad.c  quad.cpp  shader.cpp  text.cpp
tests/: main.cpp
